# baselard

./: Cargo.toml  README.md  transform.json
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: dag2.rs  serving.rs
scripts/: create_onnx_model.py  load_test.py  mock_ml_server.py
src/: cache.rs  component.rs  dag.rs  dag_visualizer.rs  dagir.rs  lib.rs
src/components/: adder.rs  channel_consumer.rs  crash_test_dummy.rs  data_to_json_processor.rs  flexible_wildcard_processor.rs  json_combiner.rs  json_to_data_processor.rs  long_running_task.rs  ml_model.rs  multi_channel_consumer.rs  payload_transformer.rs  replay.rs  string_length_counter.rs  wildcard_processor.rs
src/dag/: tests.rs
tests/: custom_component_tests.rs  integration_tests.rs  jq_pal_tests.rs
tests/resources/: complex_transform.json  dangerous_transform.json  data_pipeline.json  feature_binning_transform.json  flatten_records_transform.json  get_top_transform.json  onehot_transform.json  onnx_pipeline.json  remote_and_multiple_onnx_models.json  remote_ml_pipeline.json  replay.json  timestamp_bucketing.json  tokenize_transform.json
tests/resources/dags/: complex_transform.json  dangerous_transform.json  data_pipeline.json  feature_binning_transform.json  flatten_records_transform.json  get_top_transform.json  onehot_transform.json  onnx_pipeline.json  remote_and_multiple_onnx_models.json  remote_ml_pipeline.json  replay.json  timestamp_bucketing.json  tokenize_transform.json
tests/resources/models/: decision_tree.onnx  decision_tree_with_pipeline.onnx
(+1 files in other folders)
