[package]
name = "baselard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.17", features = ["extension-module", "auto-initialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
semver = "1.0"
regex = "1.5"
notify = "7.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
futures = "0.3"
futures-util = "0.3"
dashmap = "6"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
moka = { version = "0.12", features = ["sync"] }
jq-rs = { version = "0.4" }
ascii_tree = "0.1"
# For testing in integration tests
tempfile = "3"

[lib]
name = "baselard"
path = "src/lib.rs"
